# pico

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  license.txt  pico.py  readme.md
src/: config.rs  encode.rs  error.rs  icon.rs  image.rs  main.rs  serialize.rs
src/icon/: serialize.rs
src/image/: decode.rs  mod.rs  optimize.rs
