[package]
name = "pico"
version = "1.1.0"
authors = ["Chris Roberts"]
edition = "2024"
description = "PNG to ICO packer"
repository = "https://github.com/krobbi/pico/"
license = "MIT"
keywords = ["converter", "ico", "png"]
categories = [
  "command-line-utilities",
  "filesystem",
  "multimedia::encoding",
  "multimedia::images",
]
publish = false

[dependencies]
clap = { version = "4.5.37", features = ["cargo"] }
png = "0.17.16"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
