[package]
name = "pico"
version = "1.1.1"
authors = ["Chris Roberts"]
edition = "2024"
description = "PNG to ICO packer"
repository = "https://github.com/krobbi/pico/"
license = "MIT"
keywords = ["converter", "ico", "png"]
categories = [
  "command-line-utilities",
  "filesystem",
  "multimedia::encoding",
  "multimedia::images",
]
publish = false

[dependencies]
clap = { version = "4.5.38", features = ["cargo"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
